// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select-wrapper native accessibility should expose correct initial accessibility tree 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Option A",
      "role": "menuitem",
      "selected": true,
    },
    Object {
      "name": "Option B",
      "role": "menuitem",
    },
    Object {
      "name": "Option C",
      "role": "menuitem",
    },
  ],
  "haspopup": "menu",
  "name": "Some label. Some message",
  "role": "combobox",
  "value": "Option A",
}
`;

exports[`select-wrapper native accessibility should update accessibility tree with message text if state changes programmatically: Of Message when state = error 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "role": "none",
                        },
                        Object {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
            Object {
              "name": "Some error message.",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "alert",
}
`;

exports[`select-wrapper native accessibility should update accessibility tree with message text if state changes programmatically: Of Message when state = success 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "role": "none",
            },
            Object {
              "name": "Some success message.",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "status",
}
`;

exports[`select-wrapper native accessibility should update accessibility tree with message text if state changes programmatically: Of Select when state = error 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Option A",
      "role": "menuitem",
      "selected": true,
    },
    Object {
      "name": "Option B",
      "role": "menuitem",
    },
    Object {
      "name": "Option C",
      "role": "menuitem",
    },
  ],
  "haspopup": "menu",
  "invalid": "true",
  "name": "Some label. Some error message.",
  "role": "combobox",
  "value": "Option A",
}
`;

exports[`select-wrapper native accessibility should update accessibility tree with message text if state changes programmatically: Of Select when state = none 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Option A",
      "role": "menuitem",
      "selected": true,
    },
    Object {
      "name": "Option B",
      "role": "menuitem",
    },
    Object {
      "name": "Option C",
      "role": "menuitem",
    },
  ],
  "haspopup": "menu",
  "name": "Some label. Some description",
  "role": "combobox",
  "value": "Option A",
}
`;

exports[`select-wrapper native accessibility should update accessibility tree with message text if state changes programmatically: Of Select when state = success 1`] = `
Object {
  "children": Array [
    Object {
      "name": "Option A",
      "role": "menuitem",
      "selected": true,
    },
    Object {
      "name": "Option B",
      "role": "menuitem",
    },
    Object {
      "name": "Option C",
      "role": "menuitem",
    },
  ],
  "haspopup": "menu",
  "name": "Some label. Some success message.",
  "role": "combobox",
  "value": "Option A",
}
`;
